--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 
-		<!-- Header -->
+		<!-- Header 
 			<header id="header">
 				<div class="inner">
 					<div class="content">
@@ -26,7 +26,7 @@
 				</div>
 			</header>
 
-		
+		-->
 		
 		<div class="container text-md-center">
 			
