--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
+<!-- Header -->
+			<header id="header">
+				<div class="inner">
+					<div class="content">
+						<h1>Xstream Elite </h1>
+						<h2>Welcome to a new ...<br /></h2>
+						<a href="#" class="button big alt"><span>Let's Go</span></a>
+					</div>
+					<a href="#" class="button hidden"><span>Let's Go</span></a>
+				</div>
+			</header>
 
+		
 		
 		
 		<div class="container text-md-center">
